[bumpversion]
current_version = 0.18
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?
serialize = 
	{major}.{minor}.{patch}
	{major}.{minor}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = magorder
url = https://github.com/russoz/magorder
project_urls = 
	Bug Tracker = https://github.com/russoz/magorder/issues
	Source Code = https://github.com/russoz/magorder
description = Magnitude Order
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexei Znamensky
author_email = russoz@gmail.com
maintainer = Alexei Znamensky
maintainer_email = russoz@gmail.com
license = GPLv3
license_file = LICENSE
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Operating System :: OS Independent
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Utilities
